# fastfn

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  TODO.MD  docker-compose.integration.yml  docker-compose.yml  fastfn.json  index.html  jest.config.js  mkdocs.yml  package-lock.json  package.json  sitemap.xml  verify.sh
.beads/backup/: backup_state.json  config.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.github/workflows/: ci.yml  docs.yml  release.yml
assets/demos/: demo-init.tape
cli/: .goreleaser.yaml  benchmark-qr.sh  build.sh  coverage-go.sh  coverage.sh  go.mod  go.sum  main.go  main_test.go  test-all.sh  test-go.sh  test-lua.sh  test-playwright.sh
cli/cmd/: dev.go  dev_native.go  dev_native_test.go  dev_test.go  docs.go  doctor.go  (+17 more)
coverage/: go-cli-coverage.json  go-cli-coverage.out  go-cli-coverage.txt  lua-coverage.txt  node-coverage.txt  php-runtime-coverage-by-file.json  php-runtime-coverage.json  php-runtime-coverage.txt  php-runtime-coverage.xml  python-coverage-by-file.json  python-coverage.json  python-coverage.txt  python-coverage.xml  rust-runtime-coverage-by-file.json  rust-runtime-coverage.json  rust-runtime-coverage.txt  rust-runtime-coverage.xml  summary.json  summary.md
docs/: CNAME  fastfn-landing.html  index.md
en/: index.html
examples/: README.md
my-test-function/: fn.config.json  handler.js
openresty/: nginx.conf
sdk/python/: README.md  pyproject.toml
sdk/python/fastfn/: __init__.py  extras.py  response.py  types.py
search/: search_index.json
site/: 404.html  sitemap.xml
(+1320 files in other folders)
